<resources>
    <string name="app_name">TheMovieTestProject</string>
    <string name="fill_in_at_least_one_field">Fill in at least one field</string>
    <string name="enter_year_e_g_1995">Enter year (e.g. 1995)</string>
    <string name="enter_the_film_name_or_title">Enter the film name or title</string>
    <string name="click_to_select_genres">Click to select genres</string>
    <string name="select_genres">Select genres</string>
    <string name="select">Select</string>
    <string name="clear">Clear</string>
    <string name="enter_name">Enter name</string>
    <string name="click_to_select_person">Click to select person</string>
    <string name="with_adult">Search with the adult content</string>
    <string name="search">Search</string>
    <string name="home_fragment_title">Home</string>
    <string name="search_fragment_title">Search Movies</string>
    <string name="people_fragment_title">People</string>
    <string name="genres_fragment_title">Genres</string>
    <string name="search_result_fragment_title">Found Movies</string>
    <string name="original_language">Original language: %1$s</string>
    <string name="nothing_to_show">Nothing to show</string>
</resources>
