<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_navigator"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="ua.codeasylum.themovietestproject.view.search.SearchFragment"
        android:label="@string/search_fragment_title">
        <action
            android:id="@+id/action_searchFragment_to_searchResultFragment"
            app:destination="@id/searchResultFragment" />
        <action
            android:id="@+id/action_searchFragment_to_searchPeopleFragment"
            app:destination="@id/searchPeopleFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_searchFragment_to_selectGenresFragment"
            app:destination="@id/selectGenresFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="ua.codeasylum.themovietestproject.view.search.SearchResultFragment"
        android:label="@string/search_result_fragment_title">
        <action
            android:id="@+id/action_searchResultFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
        <argument
            android:name="year"
            app:argType="string" />
        <argument
            android:name="filmQuery"
            app:argType="string" />
        <argument
            android:name="genresIds"
            app:argType="string" />
        <argument
            android:name="personId"
            app:argType="string" />
        <argument
            android:name="isAdult"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="ua.codeasylum.themovietestproject.view.MovieDetailFragment">
        <argument
            android:name="movie"
            app:argType="ua.codeasylum.themovietestproject.model.networkDto.MovieResult" />
    </fragment>
    <fragment
        android:id="@+id/searchPeopleFragment"
        android:name="ua.codeasylum.themovietestproject.view.search.SearchPersonFragment"
        android:label="@string/people_fragment_title" />
    <fragment
        android:id="@+id/selectGenresFragment"
        android:name="ua.codeasylum.themovietestproject.view.search.SelectGenresFragment"
        android:label="@string/genres_fragment_title" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="ua.codeasylum.themovietestproject.view.home.HomeFragment"
        android:label="@string/home_fragment_title">
        <action
            android:id="@+id/action_homeFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
</navigation>