<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ua.codeasylum.themovietestproject.viewmodel.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fill_in_at_least_one_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:lines="1"
            android:id="@+id/et_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_year_e_g_1995"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:maxLines="1"
            android:text="@={viewModel.year}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <EditText
            android:ellipsize="end"
            android:lines="1"
            android:id="@+id/et_film_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_the_film_name_or_title"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={viewModel.query}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_year" />

        <TextView
            android:id="@+id/tv_genres"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:focusable="false"
            android:hint="@string/click_to_select_genres"
            android:onClick="@{() -> viewModel.openSelectGenre()}"
            android:text="@={viewModel.genresText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_film_title" />

        <TextView
            android:id="@+id/tv_select_person"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:focusable="false"
            android:hint="@string/click_to_select_person"
            android:onClick="@{() -> viewModel.openPersonSearch()}"
            android:text="@{viewModel.selectedPersonName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.isAdult}"
            android:text="@string/with_adult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_person" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.onSearchClick()}"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>